--- a/templates/account/email_change_confirm.html
+++ b/templates/account/email_change_confirm.html
@@ -6,11 +6,11 @@
 
 
 {% block content %}
-    <div class="col-md-8 m-auto text-center">
+    <div class="col-md-8 m-auto pt-5 text-center">
         <img class="lazyload lazypreload"
         data-src="{% static 'images/login-bg.png' %}"
              data-srcset="{% static 'images/login-bg.png' %} 1x, {% static 'images/login-bg2x.png' %} 2x">
-      <h2>{% blocktrans trimmed context "Email change message text" %}
+      <h2 class="mt-5">{% blocktrans trimmed context "Email change message text" %}
           {{ message }}
       {% endblocktrans %}</h2>
   </div>
