Fix toggling active class on menu

--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -164,6 +164,11 @@ ul {
             opacity: 1;
           }
         }
+        &.active {
+          &::after {
+            opacity: 1;
+          }
+        }
       }
       
     }
