Add release label on mobile

--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -112,6 +112,10 @@ img {
   text-align: center;
 }
 
+.text-underline {
+  text-decoration: underline;
+}
+
 .decoration {
   position: absolute;
 }
