--- a/src/components/App/css/variables.css
+++ b/src/components/App/css/variables.css
@@ -3,6 +3,7 @@
 
   --primaryColor: #36c1ac;
   --secondaryColor: #d62319;
+  --accentColor: #5CEDF1;
   --border-width: 1px;
   --border-radius: 1rem;
   --spacer: 1rem;
