--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,4 +1,44 @@
 header {
+  & .news {
+    display: none;
+    @media (max-width: 576px) {
+      position: relative;
+      width: 100%;
+      top: 0;
+      display: block;
+      font-weight: var(--font-weight-normal);
+      & .content {
+        padding: calc(var(--spacer) / 2) 0;
+        background: var(--accentColor);
+        & a {
+          color: var(--mobile-background);
+          padding-left: calc(var(--spacer) * 2);
+        }
+        & .close-icon {
+          position: absolute;
+          cursor: pointer;
+          right: 25px;
+          top: 10px;
+          width: 20px;
+          height: 20px;
+        }
+        & .close-icon:before, & .close-icon:after {
+          position: absolute;
+          left: 15px;
+          content: ' ';
+          height: 20px;
+          width: 2px;
+          background-color: var(--mobile-background);
+        }
+        & .close-icon:before {
+          transform: rotate(45deg);
+        }
+        & .close-icon:after {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
   & .logo {
     width: 100%;
     padding: calc(var(--spacer) * 3) 0;
