--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -38,6 +38,9 @@ header {
         }
       }
     }
+    @media (max-width: 320px) {
+      font-size: calc(var(--font-size-base) * 0.8);
+    }
   }
   & .logo {
     width: 100%;
@@ -54,8 +57,8 @@ header {
       @media (max-width: 1024px) {
         width: 130px;
       }
-      @media (max-width: 768px) {
-        width: 130px;
+      @media (max-width: 576px) {
+        width: 80px;
       }
     }
     &.open {
@@ -169,7 +172,7 @@ header {
         grid-row: 1;
         @media (max-width: 768px) {
           display: inline-grid;
-          padding: calc(var(--spacer) * 2) 0 calc(var(--spacer) * 4.5) 0;
+          padding: calc(var(--spacer) * 1.5) 0;
         }
         & li {
           grid-column: -6 / span 4;
@@ -187,7 +190,7 @@ header {
             @media (max-width: 600px) {
               grid-column: -3 / span 4;
             }
-            width: 60px;
+            width: 40px;
             height: 40px;
             position: relative;
             right: var(--spacer);
@@ -196,18 +199,18 @@ header {
             & span {
               display: block;
               position: absolute;
-              height: 5px;
+              height: 3px;
               width: 100%;
               background: var(--primaryColor);
               border-radius: 5px;
               opacity: 1;
               right: 0;
-              transform: rotate(0deg);
+              transform: rotate(0deg) skew(-20deg);
               transition: .25s ease-in-out;
               &:nth-child(1) { width: 90%; top: 0; }
-              &:nth-child(2) { width: 70%; top: 15px; }
-              &:nth-child(3) { width: 70%; top: 15px; }
-              &:nth-child(4) { width: 50%; top: 30px; }
+              &:nth-child(2) { width: 70%; top: 10px; }
+              &:nth-child(3) { width: 70%; top: 10px; }
+              &:nth-child(4) { width: 50%; top: 20px; }
             }
             &.open {
               & span {
