--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -42,7 +42,10 @@ h1 {
   line-height: var(--headings-line-height);
   text-transform: uppercase;
   @media (max-width: 768px) {
-    font-size: calc(var(--h1-font-size) * 0.7)
+    font-size: calc(var(--h1-font-size) * 0.7);
+  }
+  @media (max-width: 576px) {
+    font-size: calc(var(--h1-font-size) * 0.6);
   }
 }
 
@@ -203,5 +206,8 @@ ul {
       background-color: transparent;
       color: var(--primaryColor);
     }
+  }
+  @media (max-width: 320px) {
+    font-size: var(--font-size-base);
   }
 }
