--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -3,6 +3,7 @@
   & section {
     &.hero {
       position: relative;
+      margin-bottom: calc(var(--spacer) * 6);
       & .bg-container {
         width: 100%;
         height: 100%;
@@ -37,7 +38,11 @@
           padding: calc(var(--spacer) * 14) 0 calc(var(--spacer) * 12) calc(var(--spacer) * 2);
         }
         @media (max-width: 576px) {
-          padding: calc(var(--spacer) * 10) calc(var(--spacer) / 2)
+          padding: calc(var(--spacer) * 20) var(--spacer);
+          width: auto;
+          position: absolute;
+          top: 50%;
+          transform: translateY(-50%);
         }
         & .news {
           position: relative;
@@ -118,6 +123,9 @@
           @media (max-width: 576px) {
             bottom: 3%;
           }
+        }
+        @media (max-width: 768px) {
+          height: 80vh;
         }
     }
     &.features {
