Add wrapper for buttons on homepage

--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -43,6 +43,12 @@
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
+          & .button-wrapper {
+            text-align: center;
+            & :last-child {
+              margin-right: 0;
+            }
+          }
         }
         & .news {
           position: relative;
