Adjust demo branch after rebase

--- a/templates/category/index.html
+++ b/templates/category/index.html
@@ -3,6 +3,7 @@
 {% load build_absolute_uri from urls %}
 {% load render_bundle from webpack_loader %}
 {% load graphql %}
+{% load i18n %}
 
 {% block breadcrumb_part %}
   <li>
