--- a/src/components/App/css/index.css
+++ b/src/components/App/css/index.css
@@ -221,7 +221,7 @@ ul {
   font-size: var(--font-size-lg);
   &.btn-primary {
     border: solid var(--border-width) var(--primaryColor);
-    background: var(--mobile-background);
+    background: transparent;
     &:hover {
       background: var(--primaryColor);
       color: var(--mobile-background);
