--- a/templates/dashboard/organization/zero_page.html
+++ b/templates/dashboard/organization/zero_page.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{% trans "No companies found." %}{% endblock %}
+{% block title %}{% trans "No organizations found." %}{% endblock %}
 {% block content %}
   {% static "dashboard/images/add.svg" as img_path %}
   {% blocktrans %}
-    Company accounts will appear here once users register in the shop.
+    Organization accounts will appear here once users register in the shop.
   {% endblocktrans %}
 {% endblock %}
